--- a/template/css/product.css
+++ b/template/css/product.css
@@ -1,34 +1,45 @@
 .product{
-    padding: 100px 0;
+    padding: 100px 0 0;
 }
 .product-top{
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 .product-top p {
     font-family: var(--main-text-font);
     margin: 0 12px;
     font-size: 12px;
 }
-.product-content-left{
-    width: 50%;
-    display: flex;
-    align-items: flex-start;
-}
-.product-content-left-big-img{
-    width: 80%;
-    padding-right: 20px;
-
-}
-.product-content-left-big-img img{
-    width: 100%;
-}
-.product-content-left-small-img{
+.product-left{
     width: 20%;
 }
-.product-content-left-small-img img{
-    width: 100%;
+.product-right{
+    width: 80%;
 }
-.product-content-right{
-    width : 50%;
-    padding-left: 20px;
+.product-right-top-item:first-child{
+    flex: 2;
+    font-size: 16px;
+    font-family: var(--main-text-font);
+    font-weight: bold;
+}
+.product-right-top-item{
+    flex: 1;
+    padding: 0 12px;
+}
+.product-right-top-item button{
+    width: 100%;
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #ffff;
+    border: 1px solid #dddddd;
+    cursor: pointer;
+}
+.product-right-top-item select{
+    width: 100%;
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #ffff;
+    border: 1px solid #dddddd;
+    cursor: pointer;
 }
