--- a/template/index.html
+++ b/template/index.html
@@ -110,9 +110,9 @@
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
-							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+							<img src="https://cdn.tgdd.vn/Products/Images/7498/307878/quat-dieu-hoa-hoa-phat-hpcf1-033i-1-700x467.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Quạt điều hòa Hòa Phát HPCF1-033I 100W</h3>
+							<strong class="product-price">9.191.000 VNĐ</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -124,9 +124,9 @@
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
-							<img src="images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
-							<strong class="product-price">$78.00</strong>
+							<img src="https://cdn.tgdd.vn/Products/Images/7498/325368/quat-dieu-hoa-daikiosan-dm205-1-700x467.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Quạt điều hoà Daikiosan DM205 680W</h3>
+							<strong class="product-price">7.590.000 VNĐ</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -138,9 +138,9 @@
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price">$43.00</strong>
+							<img src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Quạt điều hoà Daikiosan DM102 110W</h3>
+							<strong class="product-price">2.690.000 VNĐ</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
