--- a/template/contact.html
+++ b/template/contact.html
@@ -241,7 +241,7 @@
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="jobs.html">Viếc làm</a></li>
+									<li><a href="jobs.html">Việc làm</a></li>
 									<li><a href="#">Đội ngũ của chúng tôi</a></li>
 									<li><a href="#">Khả năng lãnh đạo</a></li>
 									<li><a href="#">Chính sách bảo mật</a></li>
