--- a/template/css/style2.css
+++ b/template/css/style2.css
@@ -58,16 +58,18 @@ input[type="email"] {
 button {
     padding: 10px;
     font-size: 16px;
-    background-color: #4CAF50;
+    background-color: #1E91F6;
     color: #fff;
     border: none;
-    border-radius: 5px;
+
     cursor: pointer;
     transition: background-color 0.3s;
+    border-radius: 4rem;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #1277d0;
+    box-shadow: 0 8px 24px hsla(208, 92%, 32%, .3);
 }
 
 .back-to-login {
