--- a/template/livechat.html
+++ b/template/livechat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Chat</title>
-    <link rel="stylesheet" href="../template/css/style3.css">
+    <link rel="stylesheet" href="css/style3.css">
 </head>
 <body>
 
@@ -24,6 +24,6 @@
 </div>
 
 
-<script src="../template/js/script3.js"></script>
+<script src="js/script3.js"></script>
 </body>
 </html>
