--- a/template/support.html
+++ b/template/support.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang Hỗ Trợ</title>
-    <link rel="stylesheet" href="/template/css/support.css">
+    <link rel="stylesheet" href="css/support.css">
 </head>
 <body>
 
@@ -54,6 +54,6 @@
     </footer>
 </main>
 
-<script src="/template/js/support.js"></script>
+<script src="js/support.js"></script>
 </body>
 </html>
