--- a/template/Untitled-1.html
+++ b/template/Untitled-1.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quên Mật Khẩu</title>
-    <link rel="stylesheet" href="../template/css/style2.css">
+    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -12,12 +13,12 @@
         <p>Vui lòng nhập email hoặc số di động để tìm kiếm tài khoản của bạn.</p>
         <form action="/send-reset-link" method="POST">
             <label for="email">Địa chỉ Email</label>
-            <input type="email" id="email" name="email" required placeholder="Nhập email của bạn">
+            <input type="email" id="email" name="email" required placeholder="Nhập email hoặc số điện thoại của bạn">
             <button type="submit">Tìm kiếm</button>
         </form>
-        <a href="about.html" class="back-to-login">Quay lại trang đăng nhập</a>
+        <a href="login.html" class="back-to-login">Quay lại trang đăng nhập</a>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
