--- a/template/Untitled-2.html
+++ b/template/Untitled-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chỉnh Sửa Trang Cá Nhân</title>
-    <link rel="stylesheet" href="../template/css/style1.css">
+    <link rel="stylesheet" href="css/style1.css">
 </head>
 <body>
     <div class="container">
@@ -37,6 +37,6 @@
         <p id="confirmationMessage" class="hidden">Thông tin đã được cập nhật!</p>
     </div>
 
-    <script src="../template/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
