--- a/template/jobs.html
+++ b/template/jobs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Việc Làm</title>
-    <link rel="stylesheet" href="/template/css/jobs.css">
+    <link rel="stylesheet" href="css/jobs.css">
 </head>
 <body>
 
@@ -55,6 +55,9 @@
     <p>&copy; 2024 Công Ty ABC. Tất cả các quyền được bảo lưu.</p>
 </footer>
 
-<script src="/template/js/jobs.js"></script>
+<script src="js/jobs.js"></script>
+<div class="footer-section"></div>
 </body>
+<script src="js/footer.js"></script>
+
 </html>
