--- a/template/knowledgebase.html
+++ b/template/knowledgebase.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kho Kiến Thức</title>
-    <link rel="stylesheet" href="/template/css/knowledgebase.css">
+    <link rel="stylesheet" href="css/knowledgebase.css">
 </head>
 <body>
 
