--- a/template/shop.html
+++ b/template/shop.html
@@ -6,7 +6,7 @@
 * License: https://creativecommons.org/licenses/by/3.0/
 */ -->
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -64,7 +64,7 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Shop</h1>
+								<h1>Danh mục sản phẩm</h1>
 							</div>
 						</div>
 						<div class="col-lg-7">
@@ -74,55 +74,83 @@
 				</div>
 			</div>
 		<!-- End Hero Section -->
-		<div class = "product">
-			<div class ="container">
-				<div class = "product-top row">
-					<p>Trang chủ</p> <span>&#10230;</span> <p>Danh mục sản phẩm</p>
+		<section class="category">
+			<!-- Container Chính -->
+			<div class="container">
+				<!-- Thanh Điều Hướng (Breadcrumb) -->
+				<div class="category-top roww">
+					<p>Trang chủ</p>
+					<span>&#10230;</span>
+					<p>Danh mục sản phẩm</p>
 				</div>
-			</div>
-			<div class = "container">
-				<div class = "row">
-					<div class = "product-left">
+
+				<!-- Nội Dung Chính -->
+				<div class="roww">
+					<!-- Phần Trái -->
+					<div class="category-left">
 						<ul>
-							<li class ="product-left-li"><a href = "#">Hãng sản xuất</a>
+							<li id="item1" class="category-left-li"><a href="#item1">Hãng sản xuất</a>
 								<ul>
-									<li><a href = "">Kangaroo</a></li>
-									<li><a href = "">Sunhouse</a></li>
-									<li><a href = "">Hòa Phát</a></li>
-									<li><a href = "">Karofi</a></li>
-									<li><a href = "">Magic Eco</a></li>
-									<li><a href = "">Nagakawa</a></li>
+									<li><a href="#">Kangaroo</a></li>
+									<li><a href="#">Sunhouse</a></li>
+									<li><a href="#">Hòa Phát</a></li>
+									<li><a href="#">Nagakawa</a></li>
 								</ul>
 							</li>
-							<li class = "product-left-li"><a href = "">Mức giá</a></li>
-							<li class = "product-left-li"><a href = "">Diện tích làm mát</a></li>
-							<li class = "product-left-li"><a href = "">Tiện ích</a></li>
+							<li id="item2" class="category-left-li"><a href="#item2">Mức giá</a>
+								<ul>
+									<li><a href="#">Tất cả</a></li>
+									<li><a href="#">Từ 1- 3 triệu</a></li>
+									<li><a href="#">Từ 3-5 triệu</a></li>
+									<li><a href="#">Trên 5 triệu</a></li>
+								</ul>
+							</li>
+							<li id="item3" class="category-left-li"><a href="#item3">Tiện ích</a>
+								<ul>
+									<li><a href="#">Tất cả</a></li>
+									<li><a href="#">Tạo ion không khí</a></li>
+									<li><a href="#">Tự ngắt bơm khi cạn nước</a></li>
+									<li><a href="#">Hẹn giờ tắt</a></li>
+									<li><a href="#">Điều khiển từ xa</a></li>
+								</ul>
+							</li>
+							<li id="item4" class="category-left-li"><a href="#item4">Diện tích làm mát</a>
+								<ul>
+									<li><a href="#">Tất cả</a></li>
+									<li><a href="#">Dưới 20m2</a></li>
+									<li><a href="#">Từ 20-34 m2</a></li>
+									<li><a href="#">Trên 34 m2</a></li>
+								</ul>
 
-
+							</li>
 
 						</ul>
-
 					</div>
-					<div class = "product-right">
-						<div class = "product-right-top-item">
-							<p>Kết quả</p>
+
+					<!-- Phần Phải -->
+					<div class="category-right roww">
+						<!-- Các Mục Trên -->
+						<div class="category-right-top-item">
+							<p>Hiển thị sản phẩm</p>
 						</div>
-						<div class = "product-right-top-item">
-							<button><span>Bộ lọc</span><i class="fa-solid fa-caret-down"></i></button>
+						<div class="category-right-top-item">
+							<button>
+								<span>Bộ lọc</span>
+								<i class="fa-solid fa-caret-down"></i>
+							</button>
 						</div>
-						<div class = "product-right-top-item">
-							<select name = "" id="">
-								<option value="">Sắp xếp theo : </option>
-								<option value="">Nổi bật </option>
-								<option value="">Giá cao nhất </option>
-								<option value="">Giá thấp nhất </option>
-								<option value="">Trả góp 0% </option>
+						<div class="category-right-top-item">
+							<select name="" id="">
+								<option value="">Sắp xếp</option>
+								<option value="">Giá cao nhất</option>
+								<option value="">Giá thấp nhất</option>
+								<option value="">Trả góp 0đ</option>
 							</select>
 						</div>
-
-
 					</div>
-					<div class = "product-right-content">
+
+					<!-- Nội Dung Phần Phải -->
+					<div class="category-right-content roww">
 						<div class="untree_co-section product-section before-footer-section">
 							<div class="container">
 								<div class="row">
@@ -244,142 +272,22 @@
 							</div>
 						</div>
 
-
-
-
-
-
-
 					</div>
-
 				</div>
 
+				<!-- Thanh Dưới -->
+				<div class="category-right-bottom roww">
+					<div class="category-right-bottom-items">
+						<p>Hiển thị 2 <span>|</span> 4 sản phẩm</p>
+					</div>
+					<div class="category-right-bottom-items">
+						<p><span>&#171;</span>1 2 3 4 5<span>&#171;</span>Trang cuối</p>
+					</div>
+				</div>
 			</div>
-
-		</div>
-
-		
-
-		<div class="untree_co-section product-section before-footer-section">
-		    <div class="container">
-		      	<div class="row">
-
-		      		<!-- Start Column 1 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="https://cdn.tgdd.vn/Products/Images/7498/319779/quat-dieu-hoa-delites-rpd-30-1-700x467.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Quạt điều hòa Delites RPD-30 48W</h3>
-							<strong class="product-price">1.290.000 VNĐ </strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-					<!-- End Column 1 -->
-
-					<!-- Start Column 2 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Quạt điều hoà Daikiosan DM102 110W</h3>
-							<strong class="product-price">2.590.000 VNĐ</strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-					<!-- End Column 2 -->
-
-					<!-- Start Column 3 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="https://cdn.tgdd.vn/Products/Images/7498/320997/quat-dieu-hoa-daikiosan-dm103-0-700x467.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Quạt điều hoà Daikiosan DM103 175W</h3>
-							<strong class="product-price">3.490.000 VNĐ</strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-					<!-- End Column 3 -->
-
-					<!-- Start Column 4 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="https://cdn.tgdd.vn/Products/Images/7498/324895/quat-dieu-hoa-daikiosan-dm201-1-700x467.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Quạt điều hoà Daikiosan DM201 180W</h3>
-							<strong class="product-price">3.90.000 VNĐ</strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-					<!-- End Column 4 -->
+		</section>
 
 
-					<!-- Start Column 1 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="https://cdn.tgdd.vn/Products/Images/7498/319779/quat-dieu-hoa-delites-rpd-30-1-700x467.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Quạt điều hoà Delites RPD-30 48W</h3>
-							<strong class="product-price">1.290.000</strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-					<!-- End Column 1 -->
-
-					<!-- Start Column 2 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Quạt điều hoà Daikiosan DM102 110W</h3>
-							<strong class="product-price">2.590.000</strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-					<!-- End Column 2 -->
-
-					<!-- Start Column 3 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="https://cdn.tgdd.vn/Products/Images/7498/320998/quat-dieu-hoa-daikiosan-dm104-1-700x467.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Quạt điều hoà Daikiosan DM104 300W</h3>
-							<strong class="product-price">6.450.000 VNĐ</strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-					<!-- End Column 3 -->
-
-					<!-- Start Column 4 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="https://cdn.tgdd.vn/Products/Images/7498/321770/quat-dieu-hoa-kangaroo-kg50f99-1-700x467.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Quạt điều hoà Kangaroo KG50F99 165W</h3>
-							<strong class="product-price">3.590.000 VNĐ</strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-					<!-- End Column 4 -->
-
-		      	</div>
-		    </div>
-		</div>
 
 
 		<!-- Start Footer Section -->
