--- a/template/index.html
+++ b/template/index.html
@@ -74,24 +74,31 @@
 		<!------------ End Banner--------------------------->
 
 		<!-- Start Hero Section -->
-			<div class="hero">
-				<div class="container">
-					<div class="row justify-content-between">
-						<div class="col-lg-5">
-							<div class="intro-excerpt">
-								<h1>Modern Interior <span clsas="d-block">Design Studio</span></h1>
-								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
-							</div>
+		<div class="hero">
+			<div class="container">
+				<div class="row justify-content-between">
+					<div class="col-lg-5">
+						<div class="intro-excerpt">
+							<h1>Về chúng tôi</h1>
+							<p class="mb-4">
+								Furni chuyên cung cấp các sản phẩm quạt hơi nước chất lượng,
+								giúp không gian của bạn luôn mát mẻ và dễ chịu. Chúng tôi cam
+								kết mang đến giải pháp làm mát hiệu quả và dịch vụ khách hàng
+								tận tâm.
+							</p>
+							<p>
+								<a href="" class="btn btn-secondary me-2">Mua ngay</a>
+							</p>
 						</div>
-						<div class="col-lg-7">
-							<div class="hero-img-wrap">
-								<img src="images/couch.png" class="img-fluid">
-							</div>
+					</div>
+					<div class="col-lg-7">
+						<div class="hero-img-wrap">
+							<img src="images/couch.png" class="img-fluid" />
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 		<!-- End Hero Section -->
 
 		<!-- Start Product Section -->
@@ -101,9 +108,9 @@
 
 					<!-- Start Column 1 -->
 					<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-						<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
-						<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. </p>
-						<p><a href="shop.html" class="btn">Explore</a></p>
+						<h2 class="mb-4 section-title">Được chế tạo bằng vật liệu tuyệt vời.</h2>
+						<p class="mb-4">Quạt điều hoà  là một thiết bị làm mát hiệu quả được nhiều gia đình lựa chọn trong mùa nắng nóng. Vậy quạt điều hòa có công dụng, ưu điểm như thế nào? Kinh nghiệm chọn mua ra sao? Hãy cùng tìm hiểu thông qua đoạn thông tin bên dưới nhé! </p>
+						<p><a href="shop.html" class="btn">Mua ngay</a></p>
 					</div> 
 					<!-- End Column 1 -->
 
@@ -157,61 +164,96 @@
 		<!-- Start Why Choose Us Section -->
 		<div class="why-choose-section">
 			<div class="container">
-				<div class="row justify-content-between">
+				<div class="row justify-content-between align-items-center">
 					<div class="col-lg-6">
-						<h2 class="section-title">Why Choose Us</h2>
-						<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
+						<h2 class="section-title">Tại sao chọn chúng tôi?</h2>
+						<p>
+							Chúng tôi cung cấp quạt hơi nước chất lượng cao, tiết kiệm điện
+							năng và bền bỉ, giúp bạn tận hưởng không gian mát mẻ, dễ chịu suốt
+							mùa hè
+						</p>
 
 						<div class="row my-5">
 							<div class="col-6 col-md-6">
 								<div class="feature">
 									<div class="icon">
-										<img src="images/truck.svg" alt="Image" class="imf-fluid">
+										<img src="images/truck.svg" alt="Image" class="imf-fluid" />
 									</div>
-									<h3>Fast &amp; Free Shipping</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>Miễn phí vận chuyển</h3>
+									<p>
+										Chúng tôi cam kết mang đến dịch vụ giao hàng nhanh chóng và
+										miễn phí trên toàn quốc, giúp bạn nhận được sản phẩm quạt
+										hơi nước ngay trong thời gian ngắn nhất mà không phải lo
+										lắng về chi phí vận chuyển.
+									</p>
 								</div>
 							</div>
 
 							<div class="col-6 col-md-6">
 								<div class="feature">
 									<div class="icon">
-										<img src="images/bag.svg" alt="Image" class="imf-fluid">
+										<img src="images/bag.svg" alt="Image" class="imf-fluid" />
 									</div>
-									<h3>Easy to Shop</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>Dễ dàng mua sắm</h3>
+									<p>
+										Mua sắm tại Furni thật đơn giản và tiện lợi! Với giao diện
+										thân thiện, bạn chỉ cần vài bước là có thể chọn lựa và đặt
+										mua quạt hơi nước yêu thích.
+									</p>
 								</div>
 							</div>
 
 							<div class="col-6 col-md-6">
 								<div class="feature">
 									<div class="icon">
-										<img src="images/support.svg" alt="Image" class="imf-fluid">
+										<img
+												src="images/support.svg"
+												alt="Image"
+												class="imf-fluid"
+										/>
 									</div>
-									<h3>24/7 Support</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>Hỗ trợ 24/7</h3>
+									<p>
+										Chúng tôi cung cấp dịch vụ hỗ trợ khách hàng 24/7, luôn sẵn
+										sàng giải đáp mọi thắc mắc và giúp bạn giải quyết bất kỳ vấn
+										đề nào liên quan đến sản phẩm. Dù là trước, trong hoặc sau
+										khi mua hàng, đội ngũ chăm sóc khách hàng của chúng tôi luôn
+										ở đây để mang đến sự hỗ trợ tận tình và nhanh chóng nhất.
+									</p>
 								</div>
 							</div>
 
 							<div class="col-6 col-md-6">
 								<div class="feature">
 									<div class="icon">
-										<img src="images/return.svg" alt="Image" class="imf-fluid">
+										<img
+												src="images/return.svg"
+												alt="Image"
+												class="imf-fluid"
+										/>
 									</div>
-									<h3>Hassle Free Returns</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>Đổi trả dễ dàng, không phiền hà</h3>
+									<p>
+										Chúng tôi cam kết mang đến chính sách đổi trả dễ dàng và
+										không phức tạp, giúp bạn yên tâm hơn khi mua sắm. Nếu sản
+										phẩm không phù hợp hoặc gặp vấn đề, bạn có thể yêu cầu đổi
+										trả trong thời gian quy định mà không gặp bất kỳ khó khăn
+										nào, đảm bảo sự hài lòng tuyệt đối cho khách hàng.
+									</p>
 								</div>
 							</div>
-
 						</div>
 					</div>
 
 					<div class="col-lg-5">
 						<div class="img-wrap">
-							<img src="images/why-choose-us-img.jpg" alt="Image" class="img-fluid">
+							<img
+									src="images/why-choose-us-img.jpg"
+									alt="Image"
+									class="img-fluid"
+							/>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
@@ -229,16 +271,16 @@
 						</div>
 					</div>
 					<div class="col-lg-5 ps-lg-5">
-						<h2 class="section-title mb-4">We Help You Make Modern Interior Design</h2>
-						<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
+						<h2 class="section-title mb-4">Vì sao nên mua quạt điều hòa tại Furni?</h2>
+						<p>Furni tự hào là một trong những siêu thị điện máy lớn chuyên cung cấp các sản phẩm quạt điều hòa chính hãng đến từ các hãng uy tín trên thị trường với một mức giá hợp lý, phải chăng kèm theo nhiều khuyến mãi hấp dẫn (tuỳ thời điểm).</p>
 
 						<ul class="list-unstyled custom-list my-4">
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
+							<li> Dễ dàng di chuyển</li>
+							<li>Giữ ẩm không khí tốt</li>
+							<li>Cải thiện chất lượng không khí</li>
+							<li>Tiết kiệm năng lượng</li>
 						</ul>
-						<p><a herf="#" class="btn">Explore</a></p>
+						<p><a herf="#" class="btn">Mua ngay</a></p>
 					</div>
 				</div>
 			</div>
@@ -253,12 +295,13 @@
 					<div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
 						<div class="product-item-sm d-flex">
 							<div class="thumbnail">
-								<img src="images/product-1.png" alt="Image" class="img-fluid">
+								<img src="https://cdn.tgdd.vn/Products/Images/7498/235380/Slider/tq-780x433.jpg" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Nordic Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-								<p><a href="#">Read More</a></p>
+								<h3>Quạt điều hòa Rapido 6000D 80W</h3>
+								<p>Nhập mã VNPAYTGDD5 giảm từ 50,000đ đến 200,000đ (áp dụng tùy giá trị đơn hàng) khi thanh toán qua VNPAY-QR.</p>
+								<p>Cơ hội nhận ngay Phiếu mua hàng trị giá 1,000,000đ khi tham gia Trả góp Duyệt qua điện thoại, giao hàng tận nhà.</p>
+								<p><a href="#">Đọc thêm</a></p>
 							</div>
 						</div>
 					</div>
@@ -266,12 +309,13 @@
 					<div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
 						<div class="product-item-sm d-flex">
 							<div class="thumbnail">
-								<img src="images/product-2.png" alt="Image" class="img-fluid">
+								<img src="https://cdn.tgdd.vn/Products/Images/7498/306970/Slider/quat-dieu-hoa-sunhouse-shd7758638235641196553291.jpg" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Kruzo Aero Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-								<p><a href="#">Read More</a></p>
+								<h3>Quạt điều hòa Sunhouse SHD7758 170W</h3>
+								<p>Nhập mã VNPAYTGDD5 giảm từ 50,000đ đến 200,000đ (áp dụng tùy giá trị đơn hàng) khi thanh toán qua VNPAY-QR.</p>
+								<p>Cơ hội nhận ngay Phiếu mua hàng trị giá 1,000,000đ khi tham gia Trả góp Duyệt qua điện thoại, giao hàng tận nhà.</p>
+								<p><a href="#">Đọc thêm</a></p>
 							</div>
 						</div>
 					</div>
@@ -279,12 +323,13 @@
 					<div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
 						<div class="product-item-sm d-flex">
 							<div class="thumbnail">
-								<img src="images/product-3.png" alt="Image" class="img-fluid">
+								<img src="https://cdn.tgdd.vn/Products/Images/7498/100616/Slider/vi-vn-sunhouse-shd7723-98.jpg" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Ergonomic Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-								<p><a href="#">Read More</a></p>
+								<h3>Quạt điều hòa Sunhouse SHD7723 100W</h3>
+								<p>Nhập mã VNPAYTGDD5 giảm từ 50,000đ đến 200,000đ (áp dụng tùy giá trị đơn hàng) khi thanh toán qua VNPAY-QR.</p>
+								<p>Cơ hội nhận ngay Phiếu mua hàng trị giá 1,000,000đ khi tham gia Trả góp Duyệt qua điện thoại, giao hàng tận nhà.</p>
+								<p><a href="#">Đọc thêm</a></p>
 							</div>
 						</div>
 					</div>
@@ -293,159 +338,7 @@
 			</div>
 		</div>
 		<!-- End Popular Product -->
-
-		<!-- Start Testimonial Slider -->
-		<div class="testimonial-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-7 mx-auto text-center">
-						<h2 class="section-title">Testimonials</h2>
-					</div>
-				</div>
-
-				<div class="row justify-content-center">
-					<div class="col-lg-12">
-						<div class="testimonial-slider-wrap text-center">
-
-							<div id="testimonial-nav">
-								<span class="prev" data-controls="prev"><span class="fa fa-chevron-left"></span></span>
-								<span class="next" data-controls="next"><span class="fa fa-chevron-right"></span></span>
-							</div>
-
-							<div class="testimonial-slider">
-								
-								<div class="item">
-									<div class="row justify-content-center">
-										<div class="col-lg-8 mx-auto">
-
-											<div class="testimonial-block text-center">
-												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-												</blockquote>
-
-												<div class="author-info">
-													<div class="author-pic">
-														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
-													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-												</div>
-											</div>
-
-										</div>
-									</div>
-								</div> 
-								<!-- END item -->
-
-								<div class="item">
-									<div class="row justify-content-center">
-										<div class="col-lg-8 mx-auto">
-
-											<div class="testimonial-block text-center">
-												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-												</blockquote>
-
-												<div class="author-info">
-													<div class="author-pic">
-														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
-													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-												</div>
-											</div>
-
-										</div>
-									</div>
-								</div> 
-								<!-- END item -->
-
-								<div class="item">
-									<div class="row justify-content-center">
-										<div class="col-lg-8 mx-auto">
-
-											<div class="testimonial-block text-center">
-												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-												</blockquote>
-
-												<div class="author-info">
-													<div class="author-pic">
-														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
-													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-												</div>
-											</div>
-
-										</div>
-									</div>
-								</div> 
-								<!-- END item -->
-
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Testimonial Slider -->
-
-		<!-- Start Blog Section -->
-		<div class="blog-section">
-			<div class="container">
-				<div class="row mb-5">
-					<div class="col-md-6">
-						<h2 class="section-title">Recent Blog</h2>
-					</div>
-					<div class="col-md-6 text-start text-md-end">
-						<a href="#" class="more">View All Posts</a>
-					</div>
-				</div>
-
-				<div class="row">
-
-					<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="images/post-1.jpg" alt="Image" class="img-fluid"></a>
-							<div class="post-content-entry">
-								<h3><a href="#">First Time Home Owner Ideas</a></h3>
-								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="images/post-2.jpg" alt="Image" class="img-fluid"></a>
-							<div class="post-content-entry">
-								<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
-								<div class="meta">
-									<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="images/post-3.jpg" alt="Image" class="img-fluid"></a>
-							<div class="post-content-entry">
-								<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
-								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-		<!-- End Blog Section -->	
+		
 
 		<!-- Start Footer Section -->
 		<footer class="footer-section">
