Trang chính sách bao mat

--- a/template/outteam.html
+++ b/template/outteam.html
@@ -22,7 +22,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="css/tiny-slider.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <title>Out Team</title>
+    <title>Đội nhóm của chúng tôi</title>
 </head>
 
 <body>
@@ -65,7 +65,7 @@
         <div class="row justify-content-between">
             <div class="col-lg-5">
                 <div class="intro-excerpt">
-                    <h1>Out Team <Team></Team></h1>
+                    <h1>Đội nhóm của chúng tôi <Team></Team></h1>
                 </div>
             </div>
             <div class="col-lg-7">
