--- a/template/auth.html
+++ b/template/auth.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
 
-                <a href="Untitled-1.html" class="login__forgot">Quên mật khẩu?</a>
+                <a href="forgotpassword.html" class="login__forgot">Quên mật khẩu?</a>
 
                 <button type="submit" class="login__button">Đăng nhập</button>
             </form>
