--- a/template/css/forgotpassword.css
+++ b/template/css/forgotpassword.css
@@ -47,7 +47,7 @@ label {
     margin-bottom: 5px;
 }
 
-input[type="email"] {
+#email {
     padding: 10px;
     font-size: 16px;
     margin-bottom: 15px;
