--- a/template/forgotpassword.html
+++ b/template/forgotpassword.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quên Mật Khẩu</title>
-    <link rel="stylesheet" href="css/style2.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="css/forgotpassword.css">
 </head>
 <body>
     <div class="container">
         <h2>Tìm tài khoản của bạn</h2>
         <p>Vui lòng nhập email hoặc số di động để tìm kiếm tài khoản của bạn.</p>
         <form action="/send-reset-link" method="POST">
-            <label for="email">Địa chỉ Email</label>
-            <input type="email" id="email" name="email" required placeholder="Nhập email hoặc số điện thoại của bạn">
-            <button type="submit">Tìm kiếm</button>
+            <input type="text" id="email" name="email" required placeholder="Nhập email hoặc số điện thoại của bạn">
+            <button  type="submit">Tìm kiếm</button>
         </form>
         <a href="login.html" class="back-to-login">Quay lại trang đăng nhập</a>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/forgotpassword.js"></script>
 </body>
 </html>
+
+
+
+
+
 
 
 
