--- a/template/livechat.html
+++ b/template/livechat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Chat</title>
-    <link rel="stylesheet" href="css/style3.css">
+    <link rel="stylesheet" href="css/livechat.css">
 </head>
 <body>
 
@@ -17,13 +17,13 @@
         <input type="text" id="chatInput" class="chat-input" placeholder="Nhập tin nhắn...">
         <button class="chat-send-button" onclick="sendMessage()">Gửi</button>
     </div>
-    <a href="about.html" class="back-to-login">Quay lại trang đăng nhập</a>
+    <a href="about.html" class="back-to-login">Quay lại trang chủ</a>
     </div>
     
     
 </div>
 
 
-<script src="js/script3.js"></script>
+<script src="js/livechat.js"></script>
 </body>
 </html>
