--- a/template/index.html
+++ b/template/index.html
@@ -332,7 +332,7 @@
                     height: 98px;
                     object-fit: cover;
                     border-radius: 20px;
-                    margin-top: 55px;
+                    margin-top: 45px;
                     margin-left: 10px;
                   "
                 />
@@ -525,4 +525,5 @@
     <script src="js/custom.js"></script>
   </body>
   <script src="js/header.js"></script>
+  <script src="js/footer.js"></script>
 </html>
