complete detail page

--- a/template/cart.html
+++ b/template/cart.html
@@ -170,15 +170,13 @@
 
             <div class="cart-content-right-button">
               <button>TIẾP TỤC MUA HÀNG</button>
-              <button>THANH TOÁN</button>
-            </div>
-
-            <div class="cart-content-right-login">
-              <p>TÀI KHOẢN TV</p>
-              <p>
-                Hãy <a href="">Đăng nhập</a> tài khoản của bạn để tích điểm
-                thành viên
-              </p>
+              <button>
+                <a
+                  style="color: white; display: block; width: 100%"
+                  href="delivery.html"
+                  >THANH TOÁN</a
+                >
+              </button>
             </div>
           </div>
         </div>
