--- a/template/delivery.html
+++ b/template/delivery.html
@@ -180,12 +180,16 @@
           </div>
         </div>
         <div class="delivery-content-left-button now">
-          <a href=""
+          <a href="cart.html"
             ><span>&#171;</span>
             <p>Quay lại giỏ hàng</p></a
           >
           <button>
-            <p style="font-weight: bold">THANH TOÁN VÀ GIAO HÀNG</p>
+            <a
+              href="payment.html"
+              style="font-weight: bold; text-decoration: none"
+              >THANH TOÁN VÀ GIAO HÀNG</a
+            >
           </button>
         </div>
       </div>
