--- a/template/payment.html
+++ b/template/payment.html
@@ -77,7 +77,9 @@
               <p style="font-weight: bold">Phương thức giao hàng</p>
               <div class="payment-content-left-method-delivery-item">
                 <input checked type="radio" />
-                <label for="">Giao hàng chuyển phát nhanh</label>
+                <label style="font-size: 18px" for=""
+                  >Giao hàng chuyển phát nhanh</label
+                >
               </div>
             </div>
             <div class="payment-content-left-method-payment">
@@ -89,7 +91,9 @@
 
               <div class="payment-content-left-method-payment-item">
                 <input name="method-payment" type="radio" />
-                <label for="">Thanh toán bằng thẻ tín dụng (OnePay)</label>
+                <label style="font-size: 18px" for=""
+                  >Thanh toán bằng thẻ tín dụng (OnePay)</label
+                >
               </div>
               <div class="payment-content-left-method-payment-item-img">
                 <img src="images/payment/visa.jpg" alt="" />
@@ -97,7 +101,9 @@
 
               <div class="payment-content-left-method-payment-item">
                 <input checked name="method-payment" type="radio" />
-                <label for="">Thanh toán bằng thẻ ATM (OnePay)</label>
+                <label for="" style="font-size: 18px"
+                  >Thanh toán bằng thẻ ATM (OnePay)</label
+                >
               </div>
               <div class="payment-content-left-method-payment-item-img">
                 <img src="images/payment/atm.jpg" alt="" />
@@ -105,7 +111,7 @@
 
               <div class="payment-content-left-method-payment-item">
                 <input name="method-payment" type="radio" />
-                <label for="">Thanh toán Momo</label>
+                <label for="" style="font-size: 18px">Thanh toán Momo</label>
               </div>
               <div class="payment-content-left-method-payment-item-img">
                 <img src="images/payment/momo.jpg" alt="" />
@@ -113,24 +119,24 @@
 
               <div class="payment-content-left-method-payment-item">
                 <input name="method-payment" type="radio" />
-                <label for="">Thu tiền tận nơi</label>
+                <label style="font-size: 18px" for="">Thu tiền tận nơi</label>
               </div>
             </div>
           </div>
 
           <!-- Right section -->
           <div class="payment-content-right col-md-4">
-            <div class="payment-content-right-button">
+            <!-- <div class="payment-content-right-button">
               <input type="text" placeholder="Mã giảm giá/Quà tặng" />
               <button><i class="fa-solid fa-check"></i></button>
-            </div>
+            </div> -->
 
-            <div class="payment-content-right-button">
+            <!-- <div class="payment-content-right-button">
               <input type="text" placeholder="Mã cộng tác viên" />
               <button><i class="fa-solid fa-check"></i></button>
-            </div>
+            </div> -->
 
-            <div class="payment-content-right-mnv">
+            <!-- <div class="payment-content-right-mnv">
               <select name="" id="">
                 <option value="">Chọn mã nhân viên thân thiết</option>
                 <option>D123</option>
@@ -139,7 +145,7 @@
                 <option>D333</option>
                 <option>D444</option>
               </select>
-            </div>
+            </div> -->
 
             <div class="payment-content-right-bottom">
               <table>
@@ -165,24 +171,28 @@
                 </tr>
 
                 <tr>
-                  <td style="font-weight: bold" colspan="3">Tổng</td>
-                  <td style="font-weight: bold">
+                  <td style="font-weight: bold; font-size: 18px" colspan="3">
+                    Tổng
+                  </td>
+                  <td style="font-weight: bold; font-size: 18px">
                     <p>1.000.000<sup>VNĐ</sup></p>
                   </td>
                 </tr>
 
                 <tr>
-                  <td style="font-weight: bold" colspan="3">
-                    Giao hàng chuyển phát nhanh-Chuyển phát nhanh
+                  <td style="font-weight: bold; font-size: 18px" colspan="3">
+                    Giao hàng chuyển phát nhanh
                   </td>
-                  <td style="font-weight: bold">
+                  <td style="font-weight: bold; font-size: 18px">
                     <p>38.000<sup>VNĐ</sup></p>
                   </td>
                 </tr>
 
                 <tr>
-                  <td style="font-weight: bold" colspan="3">Tổng tiền hàng</td>
-                  <td style="font-weight: bold">
+                  <td style="font-weight: bold; font-size: 18px" colspan="3">
+                    Tổng tiền hàng
+                  </td>
+                  <td style="font-weight: bold; font-size: 18px">
                     <p>1.038.000<sup>VNĐ</sup></p>
                   </td>
                 </tr>
@@ -193,7 +203,11 @@
         </div>
 
         <div class="payment-content-right-payment">
-          <button>TIẾP TỤC THANH TOÁN</button>
+          <button
+            style="color: white; background-color: black; border-color: black"
+          >
+            Thanh toán
+          </button>
         </div>
       </div>
     </section>
