add href detail page

--- a/template/shop.html
+++ b/template/shop.html
@@ -133,7 +133,7 @@
                   <div class="row">
                     <!-- Start Column 1 -->
                     <div class="col-12 col-md-4 col-lg-3 mb-5">
-                      <a class="product-item" href="#">
+                      <a class="product-item" href="detail.html">
                         <img
                           src="https://cdn.tgdd.vn/Products/Images/7498/319779/quat-dieu-hoa-delites-rpd-30-1-700x467.jpg"
                           class="img-fluid product-thumbnail"
@@ -152,7 +152,7 @@
 
                     <!-- Start Column 2 -->
                     <div class="col-12 col-md-4 col-lg-3 mb-5">
-                      <a class="product-item" href="#">
+                      <a class="product-item" href="detail.html">
                         <img
                           src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg"
                           class="img-fluid product-thumbnail"
@@ -171,7 +171,7 @@
 
                     <!-- Start Column 3 -->
                     <div class="col-12 col-md-4 col-lg-3 mb-5">
-                      <a class="product-item" href="#">
+                      <a class="product-item" href="detail.html">
                         <img
                           src="https://cdn.tgdd.vn/Products/Images/7498/320997/quat-dieu-hoa-daikiosan-dm103-0-700x467.jpg"
                           class="img-fluid product-thumbnail"
@@ -190,7 +190,7 @@
 
                     <!-- Start Column 4 -->
                     <div class="col-12 col-md-4 col-lg-3 mb-5">
-                      <a class="product-item" href="#">
+                      <a class="product-item" href="detail.html">
                         <img
                           src="https://cdn.tgdd.vn/Products/Images/7498/324895/quat-dieu-hoa-daikiosan-dm201-1-700x467.jpg"
                           class="img-fluid product-thumbnail"
@@ -209,7 +209,7 @@
 
                     <!-- Start Column 1 -->
                     <div class="col-12 col-md-4 col-lg-3 mb-5">
-                      <a class="product-item" href="#">
+                      <a class="product-item" href="detail.html">
                         <img
                           src="https://cdn.tgdd.vn/Products/Images/7498/319779/quat-dieu-hoa-delites-rpd-30-1-700x467.jpg"
                           class="img-fluid product-thumbnail"
@@ -228,7 +228,7 @@
 
                     <!-- Start Column 2 -->
                     <div class="col-12 col-md-4 col-lg-3 mb-5">
-                      <a class="product-item" href="#">
+                      <a class="product-item" href="detail.html">
                         <img
                           src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg"
                           class="img-fluid product-thumbnail"
@@ -247,7 +247,7 @@
 
                     <!-- Start Column 3 -->
                     <div class="col-12 col-md-4 col-lg-3 mb-5">
-                      <a class="product-item" href="#">
+                      <a class="product-item" href="detail.html">
                         <img
                           src="https://cdn.tgdd.vn/Products/Images/7498/320998/quat-dieu-hoa-daikiosan-dm104-1-700x467.jpg"
                           class="img-fluid product-thumbnail"
@@ -266,7 +266,7 @@
 
                     <!-- Start Column 4 -->
                     <div class="col-12 col-md-4 col-lg-3 mb-5">
-                      <a class="product-item" href="#">
+                      <a class="product-item" href="detail.html">
                         <img
                           src="https://cdn.tgdd.vn/Products/Images/7498/321770/quat-dieu-hoa-kangaroo-kg50f99-1-700x467.jpg"
                           class="img-fluid product-thumbnail"
