cap nhat trang detail add setion san pham lien quan

--- a/template/detail.html
+++ b/template/detail.html
@@ -11,6 +11,7 @@
 
   <link href="css/tiny-slider.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/detail.css" />
 </head>
 <style>
   body {
@@ -491,6 +492,77 @@
       <button id="submit-comment" class="submit-btn" style="background-color: #3b5d50;">Gửi bình luận và đánh giá</button>
     </div>
   </div>
+  <div>
+    <!-----------------------Sản phẩm liên quan --------------------------------->
+    <section class = "product-related container">
+      <div class="product-related-title">
+        <p>SẢN PHẨM LIÊN QUAN</p>
+      </div>
+      <div class="product-content">
+        <div class="product-related-item">
+          <img src="https://cdn.tgdd.vn/Products/Images/7498/235848/Slider/vi-vn-hommy-rpd-80-m-1.jpg" alt="">
+          <h1>Quạt điều hoà Kangaroo KG50F99 165W</h1>
+          <p>
+            <span class="price-wrapper">
+            <span class="price-old">4.000.000<span class="currency">đ</span></span>
+            <span class="discount">-10%</span>
+            </span>
+            <span class="price-new">3.590.000<span class="currency">đ</span></span>
+
+          </p>
+        </div>
+
+        <div class="product-related-item">
+          <img src="https://cdn.tgdd.vn/Products/Images/7498/100616/Slider/vi-vn-sunhouse-shd7723-98.jpg" alt="">
+          <h1>Quạt điều hòa Sunhouse SHD7723 100W</h1>
+          <p>
+            <span class="price-wrapper">
+          <span class="price-old">2.990.000<sup>đ</sup></span>
+            <span class="discount">-15%</span>
+            </span>
+          <span class="price-new">1.590.000<sup>đ</sup></span>
+          </p>
+        </div>
+
+        <div class="product-related-item">
+          <img src="https://cdn.tgdd.vn/Products/Images/7498/215558/Slider/quat-dieu-hoa-delites-br-a12637916801686858258.jpg" alt="">
+          <h1>Quạt điều hòa Delites BR-A12 125W</h1>
+          <p>
+            <span class="price-wrapper">
+          <span class="price-old">2.590.000<sup>đ</sup></span>
+            <span class="discount">-20%</span>
+              </span>
+          <span class="price-new">1.590.000<sup>đ</sup></span>
+          </p>
+        </div>
+
+        <div class="product-related-item">
+          <img src="https://cdn.tgdd.vn/Products/Images/7498/218338/Slider/q1-780x433.png" alt="">
+          <h1>Quạt điều hoà Daikiosan DKA-04500A 175W</h1>
+          <p>
+            <span class="price-wrapper">
+          <span class="price-old">3.790.000<sup>đ</sup></span>
+            <span class="discount">-10%</span>
+              </span>
+          <span class="price-new">2.000.000<sup>đ</sup></span>
+          </p>
+        </div>
+
+        <div class="product-related-item">
+          <img src="https://cdn.tgdd.vn/Products/Images/7498/235380/Slider/tq-780x433.jpg" alt="">
+          <h1>Quạt điều hòa Rapido 6000D 80W</h1>
+          <p>
+            <span class="price-wrapper">
+          <span class="price-old">5.000.000<sup>đ</sup></span>
+            <span class="discount">-15%</span>
+            </span>
+          <span class="price-new">5.000.000<sup>đ</sup></span>
+          </p>
+        </div>
+
+      </div>
+
+    </section>
 
 
   </div>
