--- a/template/contact.html
+++ b/template/contact.html
@@ -54,14 +54,10 @@
                 liên hệ qua các kênh thông tin khác. Chúng tôi sẽ phản hồi bạn
                 trong thời gian sớm nhất.
               </p>
-              <p><a href="" class="btn btn-secondary me-2">Mua ngay</a></p>
+              <p><a href="shop.html" class="btn btn-secondary me-2">Mua ngay</a></p>
             </div>
           </div>
-          <div class="col-lg-7">
-            <div class="hero-img-wrap">
-              <img src="images/couch.png" class="img-fluid" />
-            </div>
-          </div>
+
         </div>
       </div>
     </div>
