--- a/template/services.html
+++ b/template/services.html
@@ -50,13 +50,8 @@
                 quả.
               </p>
               <p>
-                <a href="" class="btn btn-secondary me-2">Mua ngay</a>
+                <a href="shop.html" class="btn btn-secondary me-2">Mua ngay</a>
               </p>
-            </div>
-          </div>
-          <div class="col-lg-7">
-            <div class="hero-img-wrap">
-              <img src="images/couch.png" class="img-fluid" />
             </div>
           </div>
         </div>
