--- a/template/livechat.html
+++ b/template/livechat.html
@@ -17,7 +17,7 @@
         <input type="text" id="chatInput" class="chat-input" placeholder="Nhập tin nhắn...">
         <button class="chat-send-button" onclick="sendMessage()">Gửi</button>
     </div>
-    <a href="about.html" class="back-to-login">Quay lại trang chủ</a>
+    <a href="index.html" class="back-to-login">Quay lại trang chủ</a>
     </div>
     
     
